# Neuro-Symbolic-Compliance

./: .env.example  CITATION.cff  LICENSE  README.md  README_zh.md  main.py  pyproject.toml  utils.py
agents/: case_mapper.py  solver.py  statute_parser.py
find_optimize_result/: optimize_single_case.py
