[project]
name = "neuro-symbolic-compliance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen>=0.13.4",
    "dotenv>=0.9.9",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.3",
    "z3-solver>=4.16.0.0",
]
